# quasar

./: .gitignore  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_IMPROVEMENTS_REPORT.md  CONTRIBUTING.md  Cargo.toml  FINAL_COMPREHENSIVE_REPORT.md  LICENSE  LICENSE-APACHE  README.md  cargo_check_output.txt  diary.md  editor_errors.txt  fix_encoding.py  fix_encoding2.py  fix_readme_encoding.ps1  fix_runner.py  fix_runner2.py  fix_wasm.py  fixer.py  fixer2.py  fixer3.py  repomix-output.xml  run_and_verify.ps1  update_cargo.py  validate_message_temp.txt
crates/quasar-ai/: Cargo.toml
crates/quasar-ai/src/: behavior_tree.rs  blackboard.rs  debug.rs  editor.rs  goap.rs  lib.rs  navigation.rs  sensors.rs  steering.rs  utility.rs
crates/quasar-ai/tests/: ai_test.rs
crates/quasar-audio/: Cargo.toml  README.md
crates/quasar-audio/benches/: audio_bench.rs
crates/quasar-audio/src/: ambisonics.rs  audio_graph.rs  dsp.rs  dsp_nodes.rs  gpu_reverb.rs  lib.rs  plugin.rs
crates/quasar-audio/tests/: audio_tests.rs
crates/quasar-build/: Cargo.toml  README.md
crates/quasar-build/src/: main.rs
crates/quasar-build/tests/: build_tests.rs
crates/quasar-core/: Cargo.toml  README.md
crates/quasar-core/benches/: ecs_bench.rs  event_bus_bench.rs  parallel_sched_bench.rs
crates/quasar-core/proptest-regressions/: prediction.txt
crates/quasar-core/src/: animation.rs  animation_hot_reload.rs  app.rs  asset.rs  asset_bundle.rs  asset_server.rs  console_input.rs  crafting.rs  debug_draw.rs  delta_compression.rs  dialog.rs  dialogue.rs  error.rs  event.rs  event_bus.rs  hot_reload.rs  ik.rs  interest.rs  inventory.rs  item.rs  lib.rs  localization.rs  navigation.rs  net_quinn.rs  network.rs  plugin.rs  prediction.rs  prefab.rs  procgen.rs  profiler.rs  quest.rs  reflect.rs  replay.rs  save_load.rs  scene.rs  scene_serde.rs  state.rs  state_machine.rs  streaming_level.rs  template.rs  (+2 more)
crates/quasar-core/tests/: compile_time_system_param.rs  ecs_property.rs  integration_tests.rs  parallel_scheduling.rs
crates/quasar-editor/: Cargo.toml  README.md
crates/quasar-editor/src/: ai_debug_overlay.rs  ai_editor.rs  anim_blend_tree_editor.rs  animation_editor.rs  asset_browser.rs  asset_metadata.rs  asset_processor.rs  asset_store.rs  behavior_tree_editor.rs  behavior_tree_graph.rs  blackboard_debugger.rs  brush_tools.rs  bt_serialization.rs  bt_simulation.rs  console.rs  dialog_graph_editor.rs  editor_state.rs  foliage_editor.rs  gizmos.rs  hierarchy.rs  hot_reload.rs  inspector.rs  lib.rs  lib_new.rs  logic_graph.rs  logic_graph_editor.rs  logic_graph_system.rs  network_visualizer.rs  particle_editor.rs  quest_editor.rs  reflect.rs  renderer.rs  shader_graph_editor.rs  splat_editor.rs  terrain_editor.rs  timeline.rs  undo.rs  vfx_graph.rs
crates/quasar-editor/tests/: editor_tests.rs
crates/quasar-engine/: Cargo.toml  README.md
crates/quasar-engine/src/: lib.rs  runner.rs
crates/quasar-engine/tests/: engine_tests.rs
crates/quasar-lobby/: Cargo.toml  README.md
crates/quasar-lobby/src/: client.rs  lib.rs  protocol.rs  secret.rs  server.rs
crates/quasar-lobby/tests/: load_test.rs
crates/quasar-localization/: Cargo.toml
crates/quasar-localization/src/: formatter.rs  lib.rs  loader.rs  locale.rs  localization.rs
crates/quasar-localization/tests/: localization_test.rs
crates/quasar-mobile/: Cargo.toml  README.md
crates/quasar-mobile/src/: android.rs  ar.rs  gesture.rs  gyroscope.rs  haptics.rs  lib.rs  runner.rs  touch.rs
crates/quasar-mobile/tests/: mobile_tests.rs
crates/quasar-network/: Cargo.toml  README.md
crates/quasar-network/benches/: network_bench.rs
crates/quasar-network/src/: auth.rs  lib.rs  quinn.rs  replication.rs
crates/quasar-network/tests/: fuzz_network.rs  integration_tests.rs
crates/quasar-physics/: Cargo.toml  README.md
crates/quasar-physics/benches/: physics_bench.rs
crates/quasar-physics/src/: async_step.rs  character_controller.rs  cloth.rs  collider.rs  debug_draw.rs  events.rs  extras.rs  joints.rs  lib.rs  plugin.rs  rigidbody.rs  rollback.rs  soft_body.rs  vehicle.rs  world.rs
crates/quasar-physics/tests/: physics_tests.rs
crates/quasar-profiler/: Cargo.toml
crates/quasar-profiler/src/: cpu.rs  export.rs  gpu.rs  lib.rs  memory.rs  stats.rs
crates/quasar-profiler/tests/: profiler_test.rs
crates/quasar-render/: Cargo.toml  README.md
crates/quasar-render/benches/: mesh_shader_bench.rs  render_bench.rs
crates/quasar-render/src/: asset_loader.rs  bindless.rs  camera.rs  camera_controller.rs  cascade_shadow.rs  clustered.rs  components.rs  culling.rs  debug_wireframe.rs  debug_wireframe.wgsl  decal.rs  deferred.rs  environment.rs  gltf_loader.rs  gpu_memory.rs  gpu_profiler.rs  hdr.rs  hot_reload.rs  indirect_draw.rs  instanced.rs  lib.rs  light.rs  lightmap.rs  loader.rs  lod.rs  material.rs  mesh.rs  mesh_shader.rs  meshlet.rs  motion_vector_pass.rs  occlusion.rs  particle.rs  pcss.rs  pipeline.rs  pipeline_cache.rs  post_process.rs  radiance_cache.rs  reflection_probe.rs  render_2d.rs  render_graph.rs  (+19 more)
crates/quasar-render/tests/: bindless_integration.rs  golden_image.rs  mesh_shader_integration.rs  render_tests.rs
crates/quasar-scripting/: Cargo.toml  README.md
crates/quasar-scripting/src/: bridge.rs  component_registry.rs  hot_reload.rs  lib.rs  plugin.rs  security.rs  wasm_ecs_bridge.rs  wasm_scripting.rs
crates/quasar-scripting/tests/: sandbox_security.rs
crates/quasar-templates/: Cargo.toml
crates/quasar-templates/src/: fps.rs  lib.rs  platformer.rs  rpg.rs  rts.rs
crates/quasar-templates/tests/: templates_test.rs
crates/quasar-ui/: Cargo.toml  README.md
crates/quasar-xr/: Cargo.toml
examples/ai_demo/: Cargo.toml
examples/audio_demo/: Cargo.toml  README.md
examples/demo_game/: Cargo.toml
examples/lobby_server/: Cargo.toml  README.md
examples/physics_sandbox/: Cargo.toml  README.md
examples/scripting_demo/: Cargo.toml  README.md
examples/showcase/: Cargo.toml  README.md
examples/spinning_cube/: Cargo.toml  README.md
examples/web_demo/: Cargo.toml  README.md  Trunk.toml
(+138 files in other folders)
