[workspace]
resolver = "2"
members = [
    "crates/quasar-core",
    "crates/quasar-math",
    "crates/quasar-render",
    "crates/quasar-window",
    "crates/quasar-physics",
    "crates/quasar-audio",
    "crates/quasar-scripting",
    "crates/quasar-editor",
    "crates/quasar-engine",
    "crates/quasar-ui",
    "crates/quasar-mobile",
    "crates/quasar-build",
    "crates/quasar-derive",
    "examples/spinning_cube",
    "examples/showcase",
    "examples/physics_sandbox",
    "examples/audio_demo",
    "examples/scripting_demo",
]
# web_demo is wasm32-only; build with: cargo build -p web-demo --target wasm32-unknown-unknown
exclude = ["examples/web_demo"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dev25bansal-ops/quasar"
authors = ["Dev2506"]

[workspace.dependencies]
# Internal crates
quasar-core = { path = "crates/quasar-core" }
quasar-math = { path = "crates/quasar-math" }
quasar-render = { path = "crates/quasar-render" }
quasar-window = { path = "crates/quasar-window" }
quasar-physics = { path = "crates/quasar-physics" }
quasar-audio = { path = "crates/quasar-audio" }
quasar-scripting = { path = "crates/quasar-scripting" }
quasar-editor = { path = "crates/quasar-editor" }
quasar-ui = { path = "crates/quasar-ui" }
quasar-mobile = { path = "crates/quasar-mobile" }
quasar-build = { path = "crates/quasar-build" }
quasar-derive = { path = "crates/quasar-derive" }

# Rendering & windowing
wgpu = "24"
winit = "0.30"

# Math
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# Utilities
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
jni = "0.21"
ndk-context = "0.1"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2-ui-kit = { version = "0.2", features = ["UIFeedbackGenerator", "UIImpactFeedbackGenerator", "UINotificationFeedbackGenerator"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallel execution
rayon = "1.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Physics
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Audio
kira = "0.9"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Editor GUI
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# File watching
notify = "7"

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Hashing
blake3 = "1"

# 3D model loading
gltf = { version = "1", features = ["import", "utils"] }

# Font rendering
fontdue = "0.9"

# Profiling
puffin = "0.19"
tracy-client = "0.17"

# Serialization
bincode = "1"

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }
rcgen = "0.13"

# WASM/Web
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
