[package]
name = "quasar-audio"
description = "Spatial audio system for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-core = { workspace = true }
quasar-math = { path = "../quasar-math" }
kira = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[features]
default = []
gpu-reverb = ["wgpu", "bytemuck"]
