[package]
name = "quasar-build"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI build & asset-pipeline tool for the Quasar engine"

[[bin]]
name = "quasar-build"
path = "src/main.rs"

[dependencies]
quasar-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
