[package]
name = "quasar-core"
description = "Core ECS framework and application lifecycle for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
quasar-math = { path = "../quasar-math" }
rayon = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
crossbeam-channel = { workspace = true }
notify = { workspace = true }
blake3 = { workspace = true }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[features]
default = []
quinn-transport = ["dep:quinn", "dep:rustls", "dep:tokio", "dep:rcgen"]
puffin = ["dep:puffin"]
tracy = ["dep:tracy-client"]
gpu-profiling = ["dep:wgpu", "dep:bytemuck"]

[dependencies.puffin]
version = "0.19"
optional = true

[dependencies.tracy-client]
version = "0.17"
optional = true

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "ecs_bench"
harness = false
