[package]
name = "quasar-editor"
description = "Visual scene editor powered by egui for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-core = { workspace = true }
quasar-math = { workspace = true }
quasar-render = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
quasar-derive = { workspace = true }
notify.workspace = true
