[package]
name = "quasar-engine"
description = "Quasar Engine — A modular 3D game engine built in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["full"]
full = ["physics", "audio", "scripting", "editor", "ui"]
physics = ["dep:quasar-physics"]
audio = ["dep:quasar-audio"]
scripting = ["dep:quasar-scripting"]
editor = ["dep:quasar-editor"]
ui = ["dep:quasar-ui"]

[dependencies]
quasar-core = { workspace = true }
quasar-math = { workspace = true }
quasar-render = { workspace = true }
quasar-window = { workspace = true }
quasar-physics = { workspace = true, optional = true }
quasar-audio = { workspace = true, optional = true }
quasar-scripting = { workspace = true, optional = true }
quasar-editor = { workspace = true, optional = true }
quasar-ui = { workspace = true, optional = true }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
egui-wgpu = { workspace = true }
bytemuck = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window"] }
