[package]
name = "quasar-lobby"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "net", "time", "sync", "io-util", "rt-multi-thread", "macros"] }
log = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1"

[dev-dependencies]
env_logger = "0.11"

[features]
default = ["client"]
client = []
server = []
dev = []
