[package]
name = "quasar-mobile"
description = "Android & iOS build target support for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-core = { workspace = true }
quasar-math = { workspace = true }
quasar-window = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
glam = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk-context = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-ui-kit = { workspace = true }
