[package]
name = "quasar-render"
description = "3D rendering system powered by wgpu for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-core = { workspace = true }
quasar-math = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
gltf = { workspace = true }
