[package]
name = "quasar-render"
description = "3D rendering system powered by wgpu for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["full"]
full = [
    "deferred",
    "ssr",
    "terrain",
    "gpu-culling",
    "meshlet",
    "particles",
    "volumetric",
    "lightmap",
    "clustered-lighting",
    "reflection-probes",
    "decals",
    "shader-graph",
    "sprites",
    "post-process",
]
deferred = []
ssr = ["deferred"]
terrain = []
gpu-culling = []
meshlet = ["gpu-culling"]
particles = []
volumetric = []
lightmap = []
clustered-lighting = []
reflection-probes = []
decals = []
shader-graph = []
sprites = []
post-process = []

[dependencies]
quasar-core = { workspace = true }
quasar-math = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
gltf = { workspace = true }
fontdue = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "render_bench"
harness = false
