[package]
name = "quasar-scripting"
description = "Lua scripting integration for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-core = { workspace = true }
quasar-math = { workspace = true }
quasar-window = { workspace = true }
quasar-physics = { workspace = true }
quasar-audio = { workspace = true }
mlua = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
wasmtime = { version = "29", optional = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }

[features]
default = []
wasm = ["wasmtime"]
