[package]
name = "quasar-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quasar-core = { path = "../quasar-core" }
quasar-math = { path = "../quasar-math" }
fontdue = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ui_bench"
harness = false
