[package]
name = "quasar-xr"
version = "0.1.0"
edition = "2021"
description = "VR/AR support for Quasar Engine via OpenXR"

[dependencies]
quasar-core = { path = "../quasar-core" }
quasar-math = { path = "../quasar-math" }

# OpenXR
openxr = { version = "0.19", optional = true }

# Graphics
wgpu = "22"

# Math and utilities
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }

[features]
default = []
openxr = ["dep:openxr", "dep:tokio"]
