[package]
name = "audio-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
quasar-engine = { path = "../../crates/quasar-engine" }
quasar-audio = { path = "../../crates/quasar-audio" }
quasar-core = { path = "../../crates/quasar-core" }
quasar-math = { path = "../../crates/quasar-math" }
quasar-render = { path = "../../crates/quasar-render" }
quasar-window = { path = "../../crates/quasar-window" }
env_logger = "0.11"
log = "0.4"
glam = "0.29"
winit = "0.30"
