[package]
name = "audio-demo"
description = "Audio demo for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
quasar-engine = { path = "../../crates/quasar-engine" }
quasar-audio = { path = "../../crates/quasar-audio" }
quasar-core = { path = "../../crates/quasar-core" }
quasar-math = { path = "../../crates/quasar-math" }
quasar-render = { path = "../../crates/quasar-render" }
quasar-window = { path = "../../crates/quasar-window" }
env_logger = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
