[package]
name = "demo_game"
description = "Demo game for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
quasar-engine = { path = "../../crates/quasar-engine" }
quasar-core = { path = "../../crates/quasar-core" }
quasar-math = { path = "../../crates/quasar-math" }
quasar-render = { path = "../../crates/quasar-render" }
quasar-physics = { path = "../../crates/quasar-physics" }
quasar-audio = { path = "../../crates/quasar-audio" }
quasar-scripting = { path = "../../crates/quasar-scripting" }
quasar-network = { path = "../../crates/quasar-network" }
glam = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
