[package]
name = "lobby_server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
quasar-lobby = { path = "../../crates/quasar-lobby", features = ["server"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
