[package]
name = "physics-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
quasar-engine = { path = "../../crates/quasar-engine" }
quasar-physics = { path = "../../crates/quasar-physics" }
quasar-core = { path = "../../crates/quasar-core" }
quasar-math = { path = "../../crates/quasar-math" }
quasar-render = { path = "../../crates/quasar-render" }
quasar-window = { path = "../../crates/quasar-window" }
env_logger = "0.11"
log = "0.4"
glam = "0.29"
