[package]
name = "showcase"
description = "Multi-feature showcase for Quasar Engine — multiple shapes, physics, scene graph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
quasar-engine = { path = "../../crates/quasar-engine" }
env_logger = { workspace = true }
log = { workspace = true }
