[package]
name = "spinning-cube"
description = "Spinning cube demo for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
quasar-core = { workspace = true }
quasar-math = { workspace = true }
quasar-render = { workspace = true }
quasar-window = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
