[package]
name = "spinning-cube"
description = "Spinning cube demo for Quasar Engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
quasar-engine = { path = "../../crates/quasar-engine" }
env_logger = { workspace = true }
log = { workspace = true }
