[package]
name = "web-demo"
description = "WebGPU demo for Quasar Engine running in browser"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quasar-core = { path = "../../crates/quasar-core" }
quasar-math = { path = "../../crates/quasar-math" }
quasar-render = { path = "../../crates/quasar-render" }
quasar-engine = { path = "../../crates/quasar-engine", default-features = false, features = ["ui", "editor"] }
wgpu = "24"
winit = "0.30"
log = "0.4"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console",
] }
console_log = "1"
console_error_panic_hook = "0.1"