[package]
name = "web-demo"
description = "WebGPU demo for Quasar Engine running in browser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quasar-core = { path = "../../crates/quasar-core" }
quasar-math = { path = "../../crates/quasar-math" }
quasar-render = { path = "../../crates/quasar-render" }
quasar-engine = { path = "../../crates/quasar-engine", default-features = false }
wgpu = "24"
winit = { workspace = true }
log = { workspace = true }
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }

# WASM dependencies
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console",
] }
console_log = "1"
console_error_panic_hook = "0.1"